--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foody Panda</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- link -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header>
-    
+        <div class="my-7 mx-36 flex justify-between items-center">
+            <img src="images/Tasty_HUT.png" alt="">
+            <button class="bg-amber-500 py-4 px-9 rounded-lg font-bold text-xl">Sign Up</button>
+        </div>
+        <!-- banner -->
+        <div class="banner">
+            <div class="banner-child">
+                <h3 class="text-6xl font-bold text-white text-center">Taste Our Delicious <br> Best Foods</h3>
+                <p class="text-white text-center mt-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humou.</p>
+                <div class="flex justify-center items-center relative">
+                <input class="py-4 input-style rounded-lg border-none" type="text" placeholder="Search any food">
+                <button class="bg-amber-500 font-bold text-xl px-9 py-4 rounded-lg absolute top-0 right-0 bottom-0 border-none">Search</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
